k8s/1/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: client-deployment

spec:

  replicas: 3


  selector:
    matchLabels:
      component: web


  template:
    metadata:
      labels:
        component: web


    spec:

      containers:

        - name: client
          image: wafa01/multi-client

          ports:
            - containerPort: 3000
